--- a/notebook/01_explore_us_accidents.ipynb
+++ b/notebook/01_explore_us_accidents.ipynb
@@ -13162,6 +13162,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "id": "162f8ac6",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'threshold': 0.02, 'TP': 686, 'FP': 32632, 'FN': 2667, 'TN': 3008991, 'precision': 0.020589471156732098, 'recall': 0.2045929018789144, 'specificity': 0.9892715172130142}\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.metrics import confusion_matrix, precision_score, recall_score\n",
+        "\n",
+        "t = 0.02  # pick your threshold\n",
+        "y_pred = (proba_valid >= t).astype(int)\n",
+        "\n",
+        "# Confusion matrix with explicit order [0, 1]\n",
+        "tn, fp, fn, tp = confusion_matrix(y_valid, y_pred, labels=[0, 1]).ravel()\n",
+        "\n",
+        "print({\n",
+        "    \"threshold\": float(t),\n",
+        "    \"TP\": int(tp), \"FP\": int(fp), \"FN\": int(fn), \"TN\": int(tn),\n",
+        "    \"precision\": precision_score(y_valid, y_pred, zero_division=0),\n",
+        "    \"recall\":    recall_score(y_valid, y_pred, zero_division=0),\n",
+        "    \"specificity\": tn / (tn + fp + 1e-12)\n",
+        "})\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 117,
       "id": "2289e9d2",
       "metadata": {},
