--- a/notebook/01_explore_us_accidents.ipynb
+++ b/notebook/01_explore_us_accidents.ipynb
@@ -13129,22 +13129,49 @@
         "    print(\"Pruned (high corr):\", dropped)\n",
         "    X_train, X_valid, FEATURES = X_train[keep], X_valid[keep], keep\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "f48057ac",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0]\tvalidation_0-aucpr:0.01617\tvalidation_0-auc:0.90461\tvalidation_0-logloss:0.20140\tvalidation_1-aucpr:0.00916\tvalidation_1-auc:0.88129\tvalidation_1-logloss:0.20015\n",
+            "[100]\tvalidation_0-aucpr:0.02481\tvalidation_0-auc:0.94364\tvalidation_0-logloss:0.10049\tvalidation_1-aucpr:0.01481\tvalidation_1-auc:0.93218\tvalidation_1-logloss:0.10161\n",
+            "[115]\tvalidation_0-aucpr:0.02524\tvalidation_0-auc:0.94431\tvalidation_0-logloss:0.09984\tvalidation_1-aucpr:0.01485\tvalidation_1-auc:0.93215\tvalidation_1-logloss:0.10149\n",
+            "Best iteration: 95\n",
+            "Best aucpr@validation_1: 0.1013440786378567\n",
+            "{'AUC': 0.9321581988720383, 'PR-AUC': 0.01483976299807557, 'LogLoss': 0.10134407864058885}\n"
+          ]
+        }
+      ],
+      "source": [
+        "pos = int(y_train.sum())\n",
+        "neg = int(len(y_train) - pos)\n",
+        "spw = neg / max(1, pos)      \n",
+        "spw_capped = min(spw, 100.0)  \n",
+        "\n",
         "model = xgb.XGBClassifier(\n",
         "    n_estimators=2000, learning_rate=0.05,\n",
-        "    max_depth=6, min_child_weight=50,\n",
+        "    max_depth=6, min_child_weight=50, gamma=0,        # try gamma=1 later\n",
         "    subsample=0.8, colsample_bytree=0.8,\n",
         "    reg_lambda=1.0, objective=\"binary:logistic\",\n",
-        "    eval_metric=[\"aucpr\", \"auc\", \"logloss\"],\n",
-        "    early_stopping_rounds=20,\n",
-        "    n_jobs=-1, tree_method=\"hist\", random_state=0\n",
+        "    eval_metric=[\"aucpr\", \"auc\", \"logloss\"], tree_method=\"hist\",\n",
+        "    scale_pos_weight=spw_capped,\n",
+        "    early_stopping_rounds=20,   # <--- weight positives\n",
+        "    n_jobs=-1, random_state=0\n",
         ")\n",
         "\n",
         "model.fit(\n",
         "    X_train, y_train,\n",
-        "    eval_set=[(X_train, y_train), (X_valid, y_valid)],  # last is monitored\n",
-        "    verbose=100\n",
+        "    eval_set=[(X_train,y_train),(X_valid,y_valid)], verbose=100\n",
         ")\n",
-        "\n",
         "print(\"Best iteration:\", model.best_iteration)\n",
         "print(\"Best aucpr@validation_1:\", model.best_score)\n",
         "\n",
@@ -13162,36 +13189,97 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
-      "id": "162f8ac6",
+      "execution_count": 35,
+      "id": "87bd3286",
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'threshold': 0.02, 'TP': 686, 'FP': 32632, 'FN': 2667, 'TN': 3008991, 'precision': 0.020589471156732098, 'recall': 0.2045929018789144, 'specificity': 0.9892715172130142}\n"
+            "{'validation_prevalence': 0.0011011581043660114, 'average_precision': 0.01483976299807557}\n",
+            "{'label': 'threshold=0.6', 'TP': 1028, 'FP': 60556, 'FN': 2325, 'TN': 2981067, 'precision': 0.01669264744089374, 'recall': 0.3065911124366239, 'specificity': 0.9800908922637684, '%predicted_1': 2.0224789949083344, 'prevalence_%': 0.11011581043660114, 'F1': 0.03166145648859664}\n",
+            "{'label': 'best_F1_threshold=0.706953', 'TP': 385, 'FP': 13920, 'FN': 2968, 'TN': 3027703, 'precision': 0.026913666550157287, 'recall': 0.11482254697286012, 'specificity': 0.9954234959427911, '%predicted_1': 0.46979023808397835, 'prevalence_%': 0.11011581043660114, 'F1': 0.043606297428927396}\n",
+            "{'label': 'top_0.50%', 'TP': 399, 'FP': 14825, 'FN': 2954, 'TN': 3026798, 'precision': 0.026208617971623754, 'recall': 0.11899791231732777, 'specificity': 0.9951259574247039, '%predicted_1': 0.4999710999364198, 'prevalence_%': 0.11011581043660114, 'F1': 0.042956343866070945}\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "{'label': 'top_0.50%',\n",
+              " 'TP': 399,\n",
+              " 'FP': 14825,\n",
+              " 'FN': 2954,\n",
+              " 'TN': 3026798,\n",
+              " 'precision': 0.026208617971623754,\n",
+              " 'recall': 0.11899791231732777,\n",
+              " 'specificity': 0.9951259574247039,\n",
+              " '%predicted_1': 0.4999710999364198,\n",
+              " 'prevalence_%': 0.11011581043660114,\n",
+              " 'F1': 0.042956343866070945}"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "import numpy as np\n",
-        "from sklearn.metrics import confusion_matrix, precision_score, recall_score\n",
+        "from sklearn.metrics import (\n",
+        "    confusion_matrix, precision_score, recall_score, f1_score,\n",
+        "    precision_recall_curve, average_precision_score\n",
+        ")\n",
         "\n",
-        "t = 0.02  # pick your threshold\n",
-        "y_pred = (proba_valid >= t).astype(int)\n",
+        "def predict_proba_best(model, X):\n",
+        "    # XGBoost (newer API)\n",
+        "    if hasattr(model, \"best_iteration\"):\n",
+        "        return model.predict_proba(X, iteration_range=(0, model.best_iteration + 1))[:, 1]\n",
+        "    # XGBoost (older API)\n",
+        "    if hasattr(model, \"best_ntree_limit\"):\n",
+        "        return model.predict_proba(X, ntree_limit=model.best_ntree_limit)[:, 1]\n",
+        "    # Sklearn models (RF, etc.)\n",
+        "    return model.predict_proba(X)[:, 1]\n",
         "\n",
-        "# Confusion matrix with explicit order [0, 1]\n",
-        "tn, fp, fn, tp = confusion_matrix(y_valid, y_pred, labels=[0, 1]).ravel()\n",
+        "proba_valid = predict_proba_best(model, X_valid)\n",
         "\n",
+        "# For reference\n",
         "print({\n",
-        "    \"threshold\": float(t),\n",
-        "    \"TP\": int(tp), \"FP\": int(fp), \"FN\": int(fn), \"TN\": int(tn),\n",
-        "    \"precision\": precision_score(y_valid, y_pred, zero_division=0),\n",
-        "    \"recall\":    recall_score(y_valid, y_pred, zero_division=0),\n",
-        "    \"specificity\": tn / (tn + fp + 1e-12)\n",
+        "    \"validation_prevalence\": float(y_valid.mean()),\n",
+        "    \"average_precision\": float(average_precision_score(y_valid, proba_valid))\n",
         "})\n",
-        "\n"
+        "\n",
+        "# --- helper to print a confusion matrix nicely ---\n",
+        "def show_confusion(y_true, y_pred, *, label=\"\"):\n",
+        "    tn, fp, fn, tp = confusion_matrix(y_true, y_pred, labels=[0,1]).ravel()\n",
+        "    out = {\n",
+        "        \"label\": label,\n",
+        "        \"TP\": int(tp), \"FP\": int(fp), \"FN\": int(fn), \"TN\": int(tn),\n",
+        "        \"precision\": float(precision_score(y_true, y_pred, zero_division=0)),\n",
+        "        \"recall\": float(recall_score(y_true, y_pred, zero_division=0)),\n",
+        "        \"specificity\": float(tn / (tn + fp + 1e-12)),\n",
+        "        \"%predicted_1\": 100.0 * y_pred.mean(),\n",
+        "        \"prevalence_%\": 100.0 * y_true.mean(),\n",
+        "        \"F1\": float(f1_score(y_true, y_pred, zero_division=0)),\n",
+        "    }\n",
+        "    print(out)\n",
+        "    return out\n",
+        "\n",
+        "t = 0.6 \n",
+        "y_hat_t = (proba_valid >= t).astype(int)\n",
+        "show_confusion(y_valid, y_hat_t, label=f\"threshold={t:g}\")\n",
+        "\n",
+        "prec, rec, thr = precision_recall_curve(y_valid, proba_valid)\n",
+        "f1 = 2 * (prec[:-1] * rec[:-1]) / (prec[:-1] + rec[:-1] + 1e-12)\n",
+        "i_best = int(np.nanargmax(f1))\n",
+        "t_best = float(thr[i_best]) if i_best < len(thr) else 1.0\n",
+        "y_hat_f1 = (proba_valid >= t_best).astype(int)\n",
+        "show_confusion(y_valid, y_hat_f1, label=f\"best_F1_threshold={t_best:.6f}\")\n",
+        "\n",
+        "k_frac = 0.005  # e.g., top 0.5% highest risk\n",
+        "k = max(1, int(k_frac * len(y_valid)))\n",
+        "idx = np.argsort(-proba_valid)[:k]\n",
+        "y_hat_k = np.zeros_like(y_valid); y_hat_k[idx] = 1\n",
+        "show_confusion(y_valid, y_hat_k, label=f\"top_{k_frac*100:.2f}%\")\n"
       ]
     },
     {
